--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -3,103 +3,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cf927a4",
+   "id": "adf4dd1e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import re\n",
+    "from openpyxl import Workbook\n",
     "\n",
+    "# Helper function to convert month numbers to names\n",
     "def month_number_to_name(month):\n",
-    "    \"\"\"Convert month number to abbreviated month name.\"\"\"\n",
     "    return [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"][month - 1]\n",
     "\n",
+    "# Helper function to determine the last three months\n",
     "def get_last_three_months(current_month, current_year):\n",
-    "    \"\"\"Return tuples of the last three months with their years.\"\"\"\n",
-    "    months_years = []\n",
+    "    months = []\n",
     "    for i in range(3):\n",
-    "        month = (current_month - i) % 12 or 12\n",
-    "        year = current_year if month <= current_month else current_year - 1\n",
-    "        months_years.append((month, year))\n",
-    "    return list(reversed(months_years))\n",
+    "        month = (current_month - i - 1) % 12 + 1\n",
+    "        year = current_year if current_month - i > 0 else current_year - 1\n",
+    "        months.append((month, year))\n",
+    "    return months\n",
     "\n",
-    "def append_data_to_df(paste_df, sheet_name, period_value, row_value, entity, function, mica, cost_type):\n",
-    "    \"\"\"Append data to the DataFrame based on cost type (DC or HC).\"\"\"\n",
-    "    paste_row = {\n",
-    "        \"File Name\": sheet_name,\n",
-    "        \"Level 3\": '',\n",
-    "        \"Level 4\": '',\n",
-    "        \"Cost Grouping\": '',\n",
-    "        \"Cost Type\": '',\n",
-    "        \"Finance Region\": '',\n",
-    "        \"Attribute Type\": 'MoM',  # We'll modify this later for other attribute types\n",
-    "        \"Period\": period_value,\n",
-    "        \"Cost\": row_value if cost_type == 'Cost' else '',\n",
-    "        \"FTE/Contractor\": row_value if cost_type == 'FTE/Contractor' else '',\n",
-    "        \"Country\": '',\n",
-    "        \"Level 3.5\": '',\n",
-    "        \"Level 4.5\": '',\n",
-    "        \"Entity\": entity,\n",
-    "        \"Function\": function,\n",
-    "        \"Mapped Country\": '',\n",
-    "        \"MICA\": mica\n",
-    "    }\n",
-    "    paste_df = paste_df.append(paste_row, ignore_index=True)\n",
-    "    return paste_df\n",
-    "\n",
-    "def get_mom_data(sheet, current_month, current_year):\n",
-    "    \"\"\"Extract the MoM data from a given sheet.\"\"\"\n",
+    "# Function to handle pasting data for MoM type\n",
+    "def process_mom_data(sheet, sheet_name, current_month, current_year, ws):\n",
+    "    # Get last three months\n",
     "    last_three_months = get_last_three_months(current_month, current_year)\n",
-    "    mom_columns = []\n",
-    "    for col in sheet.columns:\n",
-    "        match = re.match(r'M(\\d{2}) (\\d{4})', col)  # Match Mxx YYYY pattern\n",
-    "        if match:\n",
-    "            month_num = int(match.group(1))  # Extract month number\n",
-    "            year = int(match.group(2))  # Extract year\n",
-    "            if (month_num, year) in last_three_months:\n",
-    "                mom_columns.append(col)\n",
-    "    return mom_columns\n",
+    "    \n",
+    "    # Loop through each row in the sheet\n",
+    "    for index, row in sheet.iterrows():\n",
+    "        entity = row.get('Entity', '')\n",
+    "        function = row.get('RTN Level 4', '')\n",
+    "        mica = row.get('Account', '')\n",
     "\n",
-    "def process_mom_data(processed_file_path, current_month, current_year):\n",
-    "    \"\"\"Process the MoM data for sheets with 'Actual' in the name.\"\"\"\n",
-    "    xls = pd.ExcelFile(processed_file_path)\n",
-    "    paste_df = pd.DataFrame(columns=[\n",
-    "        \"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
-    "        \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
-    "        \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
-    "        \"Function\", \"Mapped Country\", \"MICA\"\n",
-    "    ])\n",
-    "\n",
-    "    for sheet_name in xls.sheet_names:\n",
-    "        if 'Actual' in sheet_name.lower():  # Process only 'Actual' sheets\n",
-    "            sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
-    "            mom_columns = get_mom_data(sheet, current_month, current_year)\n",
-    "\n",
-    "            for index, row in sheet.iterrows():\n",
-    "                entity = row.get('Entity', '')\n",
-    "                function = row.get('RTN Level 4', '')\n",
-    "                mica = row.get('Account', '')\n",
-    "\n",
-    "                for col in mom_columns:\n",
-    "                    month_num, year = map(int, re.findall(r'\\d+', col))\n",
-    "                    period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"\n",
-    "                    row_value = row[col]\n",
-    "\n",
-    "                    if 'DC' in sheet_name:\n",
-    "                        paste_df = append_data_to_df(paste_df, sheet_name, period_value, row_value, entity, function, mica, 'Cost')\n",
-    "                    elif 'HC' in sheet_name:\n",
-    "                        paste_df = append_data_to_df(paste_df, sheet_name, period_value, row_value, entity, function, mica, 'FTE/Contractor')\n",
-    "\n",
-    "    return paste_df\n",
+    "        for month_num, year in last_three_months:\n",
+    "            month_col = f\"M{month_num:02d}{year}\"  # Format month column name\n",
+    "            if month_col in sheet.columns:\n",
+    "                period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"  # Format period\n",
+    "                if 'DC' in sheet_name:\n",
+    "                    ws.append([sheet_name, '', '', '', '', '', 'MoM', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
+    "                elif 'HC' in sheet_name:\n",
+    "                    ws.append([sheet_name, '', '', '', '', '', 'MoM', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
     "\n",
     "# Example usage\n",
-    "current_month = 4  # April\n",
-    "current_year = 2024\n",
+    "current_month = 1  # For January\n",
+    "current_year = 2025\n",
     "processed_file_path = 'Processed_file.xlsx'  # Update with your file path\n",
-    "paste_df = process_mom_data(processed_file_path, current_month, current_year)\n",
     "\n",
-    "# Write the DataFrame to a new sheet\n",
-    "paste_df.to_excel('Paste_MoM.xlsx', index=False)\n"
+    "# Load the processed file\n",
+    "xls = pd.ExcelFile(processed_file_path)\n",
+    "\n",
+    "# Create a new workbook and the \"Paste\" sheet\n",
+    "wb = Workbook()\n",
+    "ws = wb.active\n",
+    "ws.title = \"Paste\"\n",
+    "\n",
+    "# Define headers\n",
+    "headers = [\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
+    "           \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "           \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
+    "           \"Function\", \"Mapped Country\", \"MICA\"]\n",
+    "ws.append(headers)\n",
+    "\n",
+    "# Loop through sheets and apply MoM handling\n",
+    "for sheet_name in xls.sheet_names:\n",
+    "    if 'Actual' in sheet_name:  # Only process 'Actual' sheets for MoM\n",
+    "        sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
+    "        process_mom_data(sheet, sheet_name, current_month, current_year, ws)\n",
+    "\n",
+    "# Save the final workbook\n",
+    "wb.save('final_output_file.xlsx')  # Temporarily saving as xlsx since xlsm is not supported yet.\n"
    ]
   },
   {
