--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adf4dd1e",
+   "id": "23abe4b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,20 +29,31 @@
     "    # Get last three months\n",
     "    last_three_months = get_last_three_months(current_month, current_year)\n",
     "    \n",
+    "    # Ensure that the required columns exist in the sheet\n",
+    "    print(f\"Processing sheet: {sheet_name}\")\n",
+    "    print(\"Sheet Columns:\", sheet.columns)\n",
+    "    \n",
     "    # Loop through each row in the sheet\n",
     "    for index, row in sheet.iterrows():\n",
     "        entity = row.get('Entity', '')\n",
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
-    "\n",
+    "        \n",
+    "        # Iterate over the last three months\n",
     "        for month_num, year in last_three_months:\n",
     "            month_col = f\"M{month_num:02d}{year}\"  # Format month column name\n",
+    "            \n",
+    "            # Check if this month column exists in the sheet\n",
     "            if month_col in sheet.columns:\n",
     "                period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"  # Format period\n",
+    "                \n",
+    "                # Append data based on whether the sheet is DC or HC\n",
     "                if 'DC' in sheet_name:\n",
     "                    ws.append([sheet_name, '', '', '', '', '', 'MoM', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
     "                elif 'HC' in sheet_name:\n",
     "                    ws.append([sheet_name, '', '', '', '', '', 'MoM', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
+    "            else:\n",
+    "                print(f\"Month column {month_col} not found in sheet {sheet_name}\")\n",
     "\n",
     "# Example usage\n",
     "current_month = 1  # For January\n",
