--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23abe4b3",
+   "id": "1f16e154",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,32 +28,30 @@
     "def process_mom_data(sheet, sheet_name, current_month, current_year, ws):\n",
     "    # Get last three months\n",
     "    last_three_months = get_last_three_months(current_month, current_year)\n",
-    "    \n",
-    "    # Ensure that the required columns exist in the sheet\n",
+    "\n",
     "    print(f\"Processing sheet: {sheet_name}\")\n",
-    "    print(\"Sheet Columns:\", sheet.columns)\n",
-    "    \n",
+    "    print(f\"Last three months: {[(month_number_to_name(month), year) for month, year in last_three_months]}\")\n",
+    "\n",
     "    # Loop through each row in the sheet\n",
     "    for index, row in sheet.iterrows():\n",
     "        entity = row.get('Entity', '')\n",
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
+    "\n",
+    "        # Print row information for debugging\n",
+    "        print(f\"Processing row {index}: Entity={entity}, Function={function}, MICA={mica}\")\n",
     "        \n",
-    "        # Iterate over the last three months\n",
     "        for month_num, year in last_three_months:\n",
     "            month_col = f\"M{month_num:02d}{year}\"  # Format month column name\n",
-    "            \n",
-    "            # Check if this month column exists in the sheet\n",
     "            if month_col in sheet.columns:\n",
+    "                print(f\"Found column: {month_col}\")\n",
     "                period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"  # Format period\n",
-    "                \n",
-    "                # Append data based on whether the sheet is DC or HC\n",
     "                if 'DC' in sheet_name:\n",
     "                    ws.append([sheet_name, '', '', '', '', '', 'MoM', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
     "                elif 'HC' in sheet_name:\n",
     "                    ws.append([sheet_name, '', '', '', '', '', 'MoM', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
     "            else:\n",
-    "                print(f\"Month column {month_col} not found in sheet {sheet_name}\")\n",
+    "                print(f\"Column {month_col} not found in sheet: {sheet_name}\")\n",
     "\n",
     "# Example usage\n",
     "current_month = 1  # For January\n",
