--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -3,84 +3,103 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f16e154",
+   "id": "0d32274e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import re\n",
     "from openpyxl import Workbook\n",
     "\n",
-    "# Helper function to convert month numbers to names\n",
     "def month_number_to_name(month):\n",
     "    return [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"][month - 1]\n",
     "\n",
-    "# Helper function to determine the last three months\n",
-    "def get_last_three_months(current_month, current_year):\n",
-    "    months = []\n",
-    "    for i in range(3):\n",
-    "        month = (current_month - i - 1) % 12 + 1\n",
-    "        year = current_year if current_month - i > 0 else current_year - 1\n",
-    "        months.append((month, year))\n",
-    "    return months\n",
-    "\n",
-    "# Function to handle pasting data for MoM type\n",
-    "def process_mom_data(sheet, sheet_name, current_month, current_year, ws):\n",
-    "    # Get last three months\n",
-    "    last_three_months = get_last_three_months(current_month, current_year)\n",
-    "\n",
-    "    print(f\"Processing sheet: {sheet_name}\")\n",
-    "    print(f\"Last three months: {[(month_number_to_name(month), year) for month, year in last_three_months]}\")\n",
-    "\n",
-    "    # Loop through each row in the sheet\n",
+    "def add_mom(sheet, current_month, current_year, ws):\n",
+    "    \"\"\"Handle MoM data for Actual sheets.\"\"\"\n",
+    "    month_columns = [f\"M{month:02d} {current_year}\" for month in\n",
+    "                     [(current_month - i) % 12 or 12 for i in range(3)]]\n",
+    "    \n",
     "    for index, row in sheet.iterrows():\n",
     "        entity = row.get('Entity', '')\n",
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
-    "\n",
-    "        # Print row information for debugging\n",
-    "        print(f\"Processing row {index}: Entity={entity}, Function={function}, MICA={mica}\")\n",
     "        \n",
-    "        for month_num, year in last_three_months:\n",
-    "            month_col = f\"M{month_num:02d}{year}\"  # Format month column name\n",
+    "        for month_col in month_columns:\n",
     "            if month_col in sheet.columns:\n",
-    "                print(f\"Found column: {month_col}\")\n",
-    "                period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"  # Format period\n",
-    "                if 'DC' in sheet_name:\n",
-    "                    ws.append([sheet_name, '', '', '', '', '', 'MoM', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
-    "                elif 'HC' in sheet_name:\n",
-    "                    ws.append([sheet_name, '', '', '', '', '', 'MoM', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
-    "            else:\n",
-    "                print(f\"Column {month_col} not found in sheet: {sheet_name}\")\n",
+    "                value = row[month_col]\n",
+    "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
+    "                ws.append([sheet.name, '', '', '', '', '', 'MoM', period_value, value, '', '', '', '', entity, function, '', mica])\n",
+    "\n",
+    "def add_fy_target(sheet, current_month, current_year, ws):\n",
+    "    \"\"\"Handle FY Target sheets.\"\"\"\n",
+    "    fy_column_name = f'FY {current_year}'\n",
+    "    for index, row in sheet.iterrows():\n",
+    "        if fy_column_name in sheet.columns:\n",
+    "            entity = row.get('Entity', '')\n",
+    "            function = row.get('RTN Level 4', '')\n",
+    "            mica = row.get('Account', '')\n",
+    "            value = row[fy_column_name]\n",
+    "\n",
+    "            # Determine if DC or HC\n",
+    "            if 'DC' in sheet.name:\n",
+    "                ws.append([sheet.name, '', '', '', '', '', 'FY Target', f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\", value, '', '', '', '', entity, function, '', mica])\n",
+    "            elif 'HC' in sheet.name:\n",
+    "                ws.append([sheet.name, '', '', '', '', '', 'FY Target', f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\", '', value, '', '', '', entity, function, '', mica])\n",
+    "\n",
+    "def add_fy_forecast(sheet, current_year, ws):\n",
+    "    \"\"\"Handle FY Forecast sheets.\"\"\"\n",
+    "    fy_column_name = f'FY {current_year}'\n",
+    "    for index, row in sheet.iterrows():\n",
+    "        if fy_column_name in sheet.columns:\n",
+    "            entity = row.get('Entity', '')\n",
+    "            function = row.get('RTN Level 4', '')\n",
+    "            mica = row.get('Account', '')\n",
+    "            value = row[fy_column_name]\n",
+    "\n",
+    "            # Paste data based on DC or HC\n",
+    "            if 'DC' in sheet.name:\n",
+    "                ws.append([sheet.name, '', '', '', '', '', 'FY Forecast', f\"Dec-{str(current_year)[-2:]}\", value, '', '', '', '', entity, function, '', mica])\n",
+    "            elif 'HC' in sheet.name:\n",
+    "                ws.append([sheet.name, '', '', '', '', '', 'FY Forecast', f\"Dec-{str(current_year)[-2:]}\", '', value, '', '', '', entity, function, '', mica])\n",
+    "\n",
+    "def process_sheets(processed_file_path, current_month, current_year):\n",
+    "    # Load the processed file\n",
+    "    xls = pd.ExcelFile(processed_file_path)\n",
+    "    \n",
+    "    # Create a new workbook and the \"Paste\" sheet\n",
+    "    wb = Workbook()\n",
+    "    ws = wb.active\n",
+    "    ws.title = \"Paste\"\n",
+    "\n",
+    "    # Define headers for the \"Paste\" sheet\n",
+    "    headers = [\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
+    "               \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "               \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
+    "               \"Function\", \"Mapped Country\", \"MICA\"]\n",
+    "    ws.append(headers)  # Write headers to the first row\n",
+    "\n",
+    "    for sheet_name in xls.sheet_names:\n",
+    "        sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
+    "\n",
+    "        # Handle MoM for Actual sheets\n",
+    "        if 'Actual' in sheet_name:\n",
+    "            add_mom(sheet, current_month, current_year, ws)\n",
+    "\n",
+    "        # Handle FY Target sheets\n",
+    "        if 'Target' in sheet_name:\n",
+    "            add_fy_target(sheet, current_month, current_year, ws)\n",
+    "\n",
+    "        # Handle FY Forecast sheets\n",
+    "        if 'Fcst' in sheet_name:\n",
+    "            add_fy_forecast(sheet, current_year, ws)\n",
+    "\n",
+    "    # Save the final workbook\n",
+    "    wb.save('final_output_file.xlsx')\n",
     "\n",
     "# Example usage\n",
-    "current_month = 1  # For January\n",
-    "current_year = 2025\n",
+    "current_month = 6  # June\n",
+    "current_year = 2024  # Current year\n",
     "processed_file_path = 'Processed_file.xlsx'  # Update with your file path\n",
-    "\n",
-    "# Load the processed file\n",
-    "xls = pd.ExcelFile(processed_file_path)\n",
-    "\n",
-    "# Create a new workbook and the \"Paste\" sheet\n",
-    "wb = Workbook()\n",
-    "ws = wb.active\n",
-    "ws.title = \"Paste\"\n",
-    "\n",
-    "# Define headers\n",
-    "headers = [\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
-    "           \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
-    "           \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
-    "           \"Function\", \"Mapped Country\", \"MICA\"]\n",
-    "ws.append(headers)\n",
-    "\n",
-    "# Loop through sheets and apply MoM handling\n",
-    "for sheet_name in xls.sheet_names:\n",
-    "    if 'Actual' in sheet_name:  # Only process 'Actual' sheets for MoM\n",
-    "        sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
-    "        process_mom_data(sheet, sheet_name, current_month, current_year, ws)\n",
-    "\n",
-    "# Save the final workbook\n",
-    "wb.save('final_output_file.xlsx')  # Temporarily saving as xlsx since xlsm is not supported yet.\n"
+    "process_sheets(processed_file_path, current_month, current_year)\n"
    ]
   },
   {
@@ -103,7 +122,100 @@
     "    \n",
     "    # Create an empty DataFrame to collect all data for the \"Paste\" sheet\n",
     "    paste_df = pd.DataFrame(columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
-    "                                     \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "                                     \"Finance Region\", \"Attribute Type\", \"Period\", \"Costimport pandas as pd\n",
+    "from openpyxl import Workbook\n",
+    "\n",
+    "def month_number_to_name(month):\n",
+    "    return [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"][month - 1]\n",
+    "\n",
+    "def add_mom(sheet, current_month, current_year, ws):\n",
+    "    \"\"\"Handle MoM data for Actual sheets.\"\"\"\n",
+    "    month_columns = [f\"M{month:02d} {current_year}\" for month in\n",
+    "                     [(current_month - i) % 12 or 12 for i in range(3)]]\n",
+    "    \n",
+    "    for index, row in sheet.iterrows():\n",
+    "        entity = row.get('Entity', '')\n",
+    "        function = row.get('RTN Level 4', '')\n",
+    "        mica = row.get('Account', '')\n",
+    "        \n",
+    "        for month_col in month_columns:\n",
+    "            if month_col in sheet.columns:\n",
+    "                value = row[month_col]\n",
+    "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
+    "                ws.append([sheet.name, '', '', '', '', '', 'MoM', period_value, value, '', '', '', '', entity, function, '', mica])\n",
+    "\n",
+    "def add_fy_target(sheet, current_month, current_year, ws):\n",
+    "    \"\"\"Handle FY Target sheets.\"\"\"\n",
+    "    fy_column_name = f'FY {current_year}'\n",
+    "    for index, row in sheet.iterrows():\n",
+    "        if fy_column_name in sheet.columns:\n",
+    "            entity = row.get('Entity', '')\n",
+    "            function = row.get('RTN Level 4', '')\n",
+    "            mica = row.get('Account', '')\n",
+    "            value = row[fy_column_name]\n",
+    "\n",
+    "            # Determine if DC or HC\n",
+    "            if 'DC' in sheet.name:\n",
+    "                ws.append([sheet.name, '', '', '', '', '', 'FY Target', f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\", value, '', '', '', '', entity, function, '', mica])\n",
+    "            elif 'HC' in sheet.name:\n",
+    "                ws.append([sheet.name, '', '', '', '', '', 'FY Target', f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\", '', value, '', '', '', entity, function, '', mica])\n",
+    "\n",
+    "def add_fy_forecast(sheet, current_year, ws):\n",
+    "    \"\"\"Handle FY Forecast sheets.\"\"\"\n",
+    "    fy_column_name = f'FY {current_year}'\n",
+    "    for index, row in sheet.iterrows():\n",
+    "        if fy_column_name in sheet.columns:\n",
+    "            entity = row.get('Entity', '')\n",
+    "            function = row.get('RTN Level 4', '')\n",
+    "            mica = row.get('Account', '')\n",
+    "            value = row[fy_column_name]\n",
+    "\n",
+    "            # Paste data based on DC or HC\n",
+    "            if 'DC' in sheet.name:\n",
+    "                ws.append([sheet.name, '', '', '', '', '', 'FY Forecast', f\"Dec-{str(current_year)[-2:]}\", value, '', '', '', '', entity, function, '', mica])\n",
+    "            elif 'HC' in sheet.name:\n",
+    "                ws.append([sheet.name, '', '', '', '', '', 'FY Forecast', f\"Dec-{str(current_year)[-2:]}\", '', value, '', '', '', entity, function, '', mica])\n",
+    "\n",
+    "def process_sheets(processed_file_path, current_month, current_year):\n",
+    "    # Load the processed file\n",
+    "    xls = pd.ExcelFile(processed_file_path)\n",
+    "    \n",
+    "    # Create a new workbook and the \"Paste\" sheet\n",
+    "    wb = Workbook()\n",
+    "    ws = wb.active\n",
+    "    ws.title = \"Paste\"\n",
+    "\n",
+    "    # Define headers for the \"Paste\" sheet\n",
+    "    headers = [\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
+    "               \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "               \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
+    "               \"Function\", \"Mapped Country\", \"MICA\"]\n",
+    "    ws.append(headers)  # Write headers to the first row\n",
+    "\n",
+    "    for sheet_name in xls.sheet_names:\n",
+    "        sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
+    "\n",
+    "        # Handle MoM for Actual sheets\n",
+    "        if 'Actual' in sheet_name:\n",
+    "            add_mom(sheet, current_month, current_year, ws)\n",
+    "\n",
+    "        # Handle FY Target sheets\n",
+    "        if 'Target' in sheet_name:\n",
+    "            add_fy_target(sheet, current_month, current_year, ws)\n",
+    "\n",
+    "        # Handle FY Forecast sheets\n",
+    "        if 'Fcst' in sheet_name:\n",
+    "            add_fy_forecast(sheet, current_year, ws)\n",
+    "\n",
+    "    # Save the final workbook\n",
+    "    wb.save('final_output_file.xlsx')\n",
+    "\n",
+    "# Example usage\n",
+    "current_month = 6  # June\n",
+    "current_year = 2024  # Current year\n",
+    "processed_file_path = 'Processed_file.xlsx'  # Update with your file path\n",
+    "process_sheets(processed_file_path, current_month, current_year)\n",
+    "\", \n",
     "                                     \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
     "                                     \"Function\", \"Mapped Country\", \"MICA\"])\n",
     "\n",
