--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -13,7 +13,7 @@
     "def month_number_to_name(month):\n",
     "    return [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"][month - 1]\n",
     "\n",
-    "def add_mom(sheet, current_month, current_year, ws):\n",
+    "def add_mom(sheet, sheet_name, current_month, current_year, ws):\n",
     "    \"\"\"Handle MoM data for Actual sheets.\"\"\"\n",
     "    month_columns = [f\"M{month:02d} {current_year}\" for month in\n",
     "                     [(current_month - i) % 12 or 12 for i in range(3)]]\n",
@@ -27,9 +27,9 @@
     "            if month_col in sheet.columns:\n",
     "                value = row[month_col]\n",
     "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
-    "                ws.append([sheet.name, '', '', '', '', '', 'MoM', period_value, value, '', '', '', '', entity, function, '', mica])\n",
+    "                ws.append([sheet_name, '', '', '', '', '', 'MoM', period_value, value, '', '', '', '', entity, function, '', mica])\n",
     "\n",
-    "def add_fy_target(sheet, current_month, current_year, ws):\n",
+    "def add_fy_target(sheet, sheet_name, current_month, current_year, ws):\n",
     "    \"\"\"Handle FY Target sheets.\"\"\"\n",
     "    fy_column_name = f'FY {current_year}'\n",
     "    for index, row in sheet.iterrows():\n",
@@ -40,12 +40,12 @@
     "            value = row[fy_column_name]\n",
     "\n",
     "            # Determine if DC or HC\n",
-    "            if 'DC' in sheet.name:\n",
-    "                ws.append([sheet.name, '', '', '', '', '', 'FY Target', f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\", value, '', '', '', '', entity, function, '', mica])\n",
-    "            elif 'HC' in sheet.name:\n",
-    "                ws.append([sheet.name, '', '', '', '', '', 'FY Target', f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\", '', value, '', '', '', entity, function, '', mica])\n",
+    "            if 'DC' in sheet_name:\n",
+    "                ws.append([sheet_name, '', '', '', '', '', 'FY Target', f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\", value, '', '', '', '', entity, function, '', mica])\n",
+    "            elif 'HC' in sheet_name:\n",
+    "                ws.append([sheet_name, '', '', '', '', '', 'FY Target', f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\", '', value, '', '', '', entity, function, '', mica])\n",
     "\n",
-    "def add_fy_forecast(sheet, current_year, ws):\n",
+    "def add_fy_forecast(sheet, sheet_name, current_year, ws):\n",
     "    \"\"\"Handle FY Forecast sheets.\"\"\"\n",
     "    fy_column_name = f'FY {current_year}'\n",
     "    for index, row in sheet.iterrows():\n",
@@ -56,10 +56,10 @@
     "            value = row[fy_column_name]\n",
     "\n",
     "            # Paste data based on DC or HC\n",
-    "            if 'DC' in sheet.name:\n",
-    "                ws.append([sheet.name, '', '', '', '', '', 'FY Forecast', f\"Dec-{str(current_year)[-2:]}\", value, '', '', '', '', entity, function, '', mica])\n",
-    "            elif 'HC' in sheet.name:\n",
-    "                ws.append([sheet.name, '', '', '', '', '', 'FY Forecast', f\"Dec-{str(current_year)[-2:]}\", '', value, '', '', '', entity, function, '', mica])\n",
+    "            if 'DC' in sheet_name:\n",
+    "                ws.append([sheet_name, '', '', '', '', '', 'FY Forecast', f\"Dec-{str(current_year)[-2:]}\", value, '', '', '', '', entity, function, '', mica])\n",
+    "            elif 'HC' in sheet_name:\n",
+    "                ws.append([sheet_name, '', '', '', '', '', 'FY Forecast', f\"Dec-{str(current_year)[-2:]}\", '', value, '', '', '', entity, function, '', mica])\n",
     "\n",
     "def process_sheets(processed_file_path, current_month, current_year):\n",
     "    # Load the processed file\n",
@@ -82,15 +82,15 @@
     "\n",
     "        # Handle MoM for Actual sheets\n",
     "        if 'Actual' in sheet_name:\n",
-    "            add_mom(sheet, current_month, current_year, ws)\n",
+    "            add_mom(sheet, sheet_name, current_month, current_year, ws)\n",
     "\n",
     "        # Handle FY Target sheets\n",
     "        if 'Target' in sheet_name:\n",
-    "            add_fy_target(sheet, current_month, current_year, ws)\n",
+    "            add_fy_target(sheet, sheet_name, current_month, current_year, ws)\n",
     "\n",
     "        # Handle FY Forecast sheets\n",
     "        if 'Fcst' in sheet_name:\n",
-    "            add_fy_forecast(sheet, current_year, ws)\n",
+    "            add_fy_forecast(sheet, sheet_name, current_year, ws)\n",
     "\n",
     "    # Save the final workbook\n",
     "    wb.save('final_output_file.xlsx')\n",
