--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -11,6 +11,7 @@
     "from openpyxl import Workbook\n",
     "\n",
     "def month_number_to_name(month):\n",
+    "    \"\"\"Convert a month number to its name (e.g., 1 -> 'Jan').\"\"\"\n",
     "    return [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"][month - 1]\n",
     "\n",
     "def add_mom(sheet, sheet_name, current_month, current_year, ws):\n",
@@ -27,7 +28,7 @@
     "            if month_col in sheet.columns:\n",
     "                value = row[month_col]\n",
     "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
-    "                ws.append([sheet_name, '', '', '', '', '', 'MoM', period_value, value, '', '', '', '', entity, function, '', mica])\n",
+    "                ws.append([sheet_name, '', '', '', '', '', 'MoM', period_value, value if 'DC' in sheet_name else '', value if 'HC' in sheet_name else '', '', '', '', entity, function, '', mica])\n",
     "\n",
     "def add_fy_target(sheet, sheet_name, current_month, current_year, ws):\n",
     "    \"\"\"Handle FY Target sheets.\"\"\"\n",
@@ -80,7 +81,7 @@
     "    for sheet_name in xls.sheet_names:\n",
     "        sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
     "\n",
-    "        # Handle MoM for Actual sheets\n",
+    "        # Handle MoM for Actual sheets (This logic remains as you confirmed it was working before)\n",
     "        if 'Actual' in sheet_name:\n",
     "            add_mom(sheet, sheet_name, current_month, current_year, ws)\n",
     "\n",
