--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -8,99 +8,121 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from openpyxl import Workbook\n",
+    "import re\n",
     "\n",
+    "# Helper function to convert month numbers to names\n",
     "def month_number_to_name(month):\n",
-    "    \"\"\"Convert a month number to its name (e.g., 1 -> 'Jan').\"\"\"\n",
     "    return [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"][month - 1]\n",
     "\n",
-    "def add_mom(sheet, sheet_name, current_month, current_year, ws):\n",
-    "    \"\"\"Handle MoM data for Actual sheets.\"\"\"\n",
-    "    month_columns = [f\"M{month:02d} {current_year}\" for month in\n",
-    "                     [(current_month - i) % 12 or 12 for i in range(3)]]\n",
+    "# Helper function to determine the last three months\n",
+    "def get_last_three_months(current_month, current_year):\n",
+    "    months = []\n",
+    "    for i in range(3):\n",
+    "        month = (current_month - i - 1) % 12 + 1\n",
+    "        year = current_year if current_month - i > 0 else current_year - 1\n",
+    "        months.append((month, year))\n",
+    "    return months\n",
+    "\n",
+    "# Function to handle pasting data for MoM type\n",
+    "def process_mom_data(sheet, sheet_name, current_month, current_year):\n",
+    "    # Initialize an empty list to store MoM data\n",
+    "    mom_data = []\n",
     "    \n",
+    "    # Get last three months\n",
+    "    last_three_months = get_last_three_months(current_month, current_year)\n",
+    "    \n",
+    "    # Loop through each row in the sheet\n",
     "    for index, row in sheet.iterrows():\n",
     "        entity = row.get('Entity', '')\n",
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
     "        \n",
-    "        for month_col in month_columns:\n",
+    "        # Iterate over the last three months\n",
+    "        for month_num, year in last_three_months:\n",
+    "            month_col = f\"M{month_num:02d} {year}\"  # Note space between month and year\n",
+    "            \n",
+    "            # Check if this month column exists in the sheet\n",
     "            if month_col in sheet.columns:\n",
-    "                value = row[month_col]\n",
-    "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
-    "                ws.append([sheet_name, '', '', '', '', '', 'MoM', period_value, value if 'DC' in sheet_name else '', value if 'HC' in sheet_name else '', '', '', '', entity, function, '', mica])\n",
+    "                period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"  # Format period\n",
+    "                \n",
+    "                # Collect data based on whether the sheet is DC or HC\n",
+    "                if 'DC' in sheet_name:\n",
+    "                    mom_data.append([sheet_name, '', '', '', '', '', 'MoM', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
+    "                elif 'HC' in sheet_name:\n",
+    "                    mom_data.append([sheet_name, '', '', '', '', '', 'MoM', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
+    "    \n",
+    "    return pd.DataFrame(mom_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
+    "                                           \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "                                           \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
+    "                                           \"Function\", \"Mapped Country\", \"MICA\"])\n",
     "\n",
-    "def add_fy_target(sheet, sheet_name, current_month, current_year, ws):\n",
-    "    \"\"\"Handle FY Target sheets.\"\"\"\n",
-    "    fy_column_name = f'FY {current_year}'\n",
+    "# Function to handle FY data\n",
+    "def process_fy_data(sheet, sheet_name, current_year, attribute_type):\n",
+    "    # Initialize an empty list to store FY data\n",
+    "    fy_data = []\n",
+    "    \n",
+    "    # Determine FY column\n",
+    "    fy_col = f\"FY {current_year}\"\n",
+    "    \n",
+    "    # Loop through each row in the sheet\n",
     "    for index, row in sheet.iterrows():\n",
-    "        if fy_column_name in sheet.columns:\n",
-    "            entity = row.get('Entity', '')\n",
-    "            function = row.get('RTN Level 4', '')\n",
-    "            mica = row.get('Account', '')\n",
-    "            value = row[fy_column_name]\n",
-    "\n",
-    "            # Determine if DC or HC\n",
+    "        entity = row.get('Entity', '')\n",
+    "        function = row.get('RTN Level 4', '')\n",
+    "        mica = row.get('Account', '')\n",
+    "        \n",
+    "        if fy_col in sheet.columns:\n",
+    "            period_value = f\"Dec-{str(current_year)[-2:]}\"  # Format period\n",
+    "            \n",
+    "            # Collect data based on whether the sheet is DC or HC\n",
     "            if 'DC' in sheet_name:\n",
-    "                ws.append([sheet_name, '', '', '', '', '', 'FY Target', f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\", value, '', '', '', '', entity, function, '', mica])\n",
+    "                fy_data.append([sheet_name, '', '', '', '', '', attribute_type, period_value, row[fy_col], '', '', '', '', entity, function, '', mica])\n",
     "            elif 'HC' in sheet_name:\n",
-    "                ws.append([sheet_name, '', '', '', '', '', 'FY Target', f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\", '', value, '', '', '', entity, function, '', mica])\n",
+    "                fy_data.append([sheet_name, '', '', '', '', '', attribute_type, period_value, '', row[fy_col], '', '', '', entity, function, '', mica])\n",
+    "    \n",
+    "    return pd.DataFrame(fy_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
+    "                                          \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "                                          \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
+    "                                          \"Function\", \"Mapped Country\", \"MICA\"])\n",
     "\n",
-    "def add_fy_forecast(sheet, sheet_name, current_year, ws):\n",
-    "    \"\"\"Handle FY Forecast sheets.\"\"\"\n",
-    "    fy_column_name = f'FY {current_year}'\n",
-    "    for index, row in sheet.iterrows():\n",
-    "        if fy_column_name in sheet.columns:\n",
-    "            entity = row.get('Entity', '')\n",
-    "            function = row.get('RTN Level 4', '')\n",
-    "            mica = row.get('Account', '')\n",
-    "            value = row[fy_column_name]\n",
-    "\n",
-    "            # Paste data based on DC or HC\n",
-    "            if 'DC' in sheet_name:\n",
-    "                ws.append([sheet_name, '', '', '', '', '', 'FY Forecast', f\"Dec-{str(current_year)[-2:]}\", value, '', '', '', '', entity, function, '', mica])\n",
-    "            elif 'HC' in sheet_name:\n",
-    "                ws.append([sheet_name, '', '', '', '', '', 'FY Forecast', f\"Dec-{str(current_year)[-2:]}\", '', value, '', '', '', entity, function, '', mica])\n",
-    "\n",
-    "def process_sheets(processed_file_path, current_month, current_year):\n",
+    "# Main function to process the entire file and consolidate data\n",
+    "def process_file(processed_file_path, current_month, current_year):\n",
     "    # Load the processed file\n",
     "    xls = pd.ExcelFile(processed_file_path)\n",
     "    \n",
-    "    # Create a new workbook and the \"Paste\" sheet\n",
-    "    wb = Workbook()\n",
-    "    ws = wb.active\n",
-    "    ws.title = \"Paste\"\n",
-    "\n",
-    "    # Define headers for the \"Paste\" sheet\n",
-    "    headers = [\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
-    "               \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
-    "               \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
-    "               \"Function\", \"Mapped Country\", \"MICA\"]\n",
-    "    ws.append(headers)  # Write headers to the first row\n",
-    "\n",
+    "    # Initialize empty dataframes for MoM and FY data\n",
+    "    df_mom = pd.DataFrame()\n",
+    "    df_fy_target = pd.DataFrame()\n",
+    "    df_fy_forecast = pd.DataFrame()\n",
+    "    \n",
+    "    # Loop through sheets and apply respective processing\n",
     "    for sheet_name in xls.sheet_names:\n",
     "        sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
-    "\n",
-    "        # Handle MoM for Actual sheets (This logic remains as you confirmed it was working before)\n",
-    "        if 'Actual' in sheet_name:\n",
-    "            add_mom(sheet, sheet_name, current_month, current_year, ws)\n",
-    "\n",
-    "        # Handle FY Target sheets\n",
-    "        if 'Target' in sheet_name:\n",
-    "            add_fy_target(sheet, sheet_name, current_month, current_year, ws)\n",
-    "\n",
-    "        # Handle FY Forecast sheets\n",
-    "        if 'Fcst' in sheet_name:\n",
-    "            add_fy_forecast(sheet, sheet_name, current_year, ws)\n",
-    "\n",
-    "    # Save the final workbook\n",
-    "    wb.save('final_output_file.xlsx')\n",
+    "        \n",
+    "        if 'Actual' in sheet_name:  # Only process 'Actual' sheets for MoM\n",
+    "            df_mom = pd.concat([df_mom, process_mom_data(sheet, sheet_name, current_month, current_year)], ignore_index=True)\n",
+    "        \n",
+    "        if 'Target' in sheet_name:  # Process 'Target' sheets for FY Target\n",
+    "            df_fy_target = pd.concat([df_fy_target, process_fy_data(sheet, sheet_name, current_year, 'FY Target')], ignore_index=True)\n",
+    "        \n",
+    "        if 'Fcst' in sheet_name:  # Process 'Fcst' sheets for FY Forecast\n",
+    "            df_fy_forecast = pd.concat([df_fy_forecast, process_fy_data(sheet, sheet_name, current_year, 'FY Forecast')], ignore_index=True)\n",
+    "    \n",
+    "    # Concatenate all dataframes into a final dataframe\n",
+    "    final_df = pd.concat([df_mom, df_fy_target, df_fy_forecast], ignore_index=True)\n",
+    "    \n",
+    "    return final_df\n",
     "\n",
     "# Example usage\n",
-    "current_month = 6  # June\n",
-    "current_year = 2024  # Current year\n",
+    "current_month = 1  # For January\n",
+    "current_year = 2025\n",
     "processed_file_path = 'Processed_file.xlsx'  # Update with your file path\n",
-    "process_sheets(processed_file_path, current_month, current_year)\n"
+    "\n",
+    "# Process the file and return the final dataframe\n",
+    "final_df = process_file(processed_file_path, current_month, current_year)\n",
+    "\n",
+    "# Save the final dataframe to a file\n",
+    "final_df.to_excel('final_output_file.xlsx', index=False)  # Save as xlsx\n",
+    "print(\"done\")"
    ]
   },
   {
