--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -46,9 +46,9 @@
     "                period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"  # Format period\n",
     "                \n",
     "                # Collect data based on whether the sheet is DC or HC\n",
-    "                if 'DC' in sheet_name:\n",
+    "                if 'DC' in sheet_name.upper():\n",
     "                    mom_data.append([sheet_name, '', '', '', '', '', 'MoM', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
-    "                elif 'HC' in sheet_name:\n",
+    "                elif 'HC' in sheet_name.upper():\n",
     "                    mom_data.append([sheet_name, '', '', '', '', '', 'MoM', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
     "    \n",
     "    return pd.DataFrame(mom_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
@@ -64,20 +64,23 @@
     "    # Determine FY column\n",
     "    fy_col = f\"FY {current_year}\"\n",
     "    \n",
+    "    # Check if the FY column exists in the sheet\n",
+    "    if fy_col not in sheet.columns:\n",
+    "        print(f\"{fy_col} not found in {sheet_name}, skipping this sheet.\")\n",
+    "        return pd.DataFrame()  # Return an empty dataframe if the column is not found\n",
+    "    \n",
     "    # Loop through each row in the sheet\n",
     "    for index, row in sheet.iterrows():\n",
     "        entity = row.get('Entity', '')\n",
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
     "        \n",
-    "        if fy_col in sheet.columns:\n",
-    "            period_value = f\"Dec-{str(current_year)[-2:]}\"  # Format period\n",
-    "            \n",
-    "            # Collect data based on whether the sheet is DC or HC\n",
-    "            if 'DC' in sheet_name:\n",
-    "                fy_data.append([sheet_name, '', '', '', '', '', attribute_type, period_value, row[fy_col], '', '', '', '', entity, function, '', mica])\n",
-    "            elif 'HC' in sheet_name:\n",
-    "                fy_data.append([sheet_name, '', '', '', '', '', attribute_type, period_value, '', row[fy_col], '', '', '', entity, function, '', mica])\n",
+    "        # Collect data based on whether the sheet is DC or HC\n",
+    "        period_value = f\"Dec-{str(current_year)[-2:]}\"  # Format period\n",
+    "        if 'DC' in sheet_name.upper():\n",
+    "            fy_data.append([sheet_name, '', '', '', '', '', attribute_type, period_value, row[fy_col], '', '', '', '', entity, function, '', mica])\n",
+    "        elif 'HC' in sheet_name.upper():\n",
+    "            fy_data.append([sheet_name, '', '', '', '', '', attribute_type, period_value, '', row[fy_col], '', '', '', entity, function, '', mica])\n",
     "    \n",
     "    return pd.DataFrame(fy_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
     "                                          \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
@@ -98,13 +101,16 @@
     "    for sheet_name in xls.sheet_names:\n",
     "        sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
     "        \n",
-    "        if 'Actual' in sheet_name:  # Only process 'Actual' sheets for MoM\n",
+    "        # Convert sheet name to lower case for case-insensitive matching\n",
+    "        sheet_name_lower = sheet_name.lower()\n",
+    "        \n",
+    "        if 'actual' in sheet_name_lower:  # Only process 'Actual' sheets for MoM\n",
     "            df_mom = pd.concat([df_mom, process_mom_data(sheet, sheet_name, current_month, current_year)], ignore_index=True)\n",
     "        \n",
-    "        if 'Target' in sheet_name:  # Process 'Target' sheets for FY Target\n",
+    "        if 'target' in sheet_name_lower:  # Process 'Target' sheets for FY Target\n",
     "            df_fy_target = pd.concat([df_fy_target, process_fy_data(sheet, sheet_name, current_year, 'FY Target')], ignore_index=True)\n",
     "        \n",
-    "        if 'Fcst' in sheet_name:  # Process 'Fcst' sheets for FY Forecast\n",
+    "        if 'fcst' in sheet_name_lower:  # Process 'Fcst' sheets for FY Forecast\n",
     "            df_fy_forecast = pd.concat([df_fy_forecast, process_fy_data(sheet, sheet_name, current_year, 'FY Forecast')], ignore_index=True)\n",
     "    \n",
     "    # Concatenate all dataframes into a final dataframe\n",
@@ -121,8 +127,7 @@
     "final_df = process_file(processed_file_path, current_month, current_year)\n",
     "\n",
     "# Save the final dataframe to a file\n",
-    "final_df.to_excel('final_output_file.xlsx', index=False)  # Save as xlsx\n",
-    "print(\"done\")"
+    "final_df.to_excel('final_output_file.xlsx', index=False)  # Save as xlsx\n"
    ]
   },
   {
